<resources>
    <string name="app_name">Blesh Demo</string>
    <string name="campaign_template">Campaign Template</string>
    <string name="full_page_template">Full Page Template</string>
    <string name="push_notification_template">Push Notification Template</string>
    <string name="coupon_template">Coupon Template</string>
    <string name="ad_template">Ad Template</string>
    <string name="coupon_code_template">Coupon Code Template</string>
    <string name="qa_template">Q &amp; A Template</string>
    <string name="choose_template">Choose a template to see how it looks like!</string>

    <!--Dummy templates-->
    <string name="full_page_template_response">[{\"templateImage\":\"http://templates.beacon.do/C9131C5B-F283-11E5-9830-00155D6A5E3C_720x1280.jpg\",\"transactionId\":\"9558B3A9-A2B3-4CAF-B07E-5AC7EBC07513\",\"imageGUID\":\"C9131C5B-F283-11E5-9830-00155D6A5E3C\",\"pushText\":\"*Hi there! This is a Full Page Template.\",\"visibilityFlag\":true,\"distance\":\"433.77928279479454\",\"type\":0,\"actions\":[{\"type\":\"action\",\"value\":\"http://google.com\",\"valueType\":\"URL\",\"properties\":\"{\\\"frame\\\":\\\"127;1083;483;90\\\"}\"},{\"type\":\"closeButton\",\"value\":\"img/closeButton_w.png\",\"properties\":\"{\\\"frame\\\":\\\"663;45;33;33\\\"}\"},{\"type\":\"description\",\"value\":\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus molestie lorem id scelerisque luctus. Proin ac ex rhoncus leo aliquet condimentum. Nullam ut eleifend neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam eros eros, facilisis ut sem vel, cursus sagittis felis. Curabitur ac lectus dignissim ipsum scelerisque cursus. Suspendisse tempor tellus ut odio malesuada scelerisque. Ut in fermentum justo. Sed ac augue velit.\\n\\nPraesent a hendrerit ex. Nam sem ipsum, euismod vitae vulputate vel, sagittis eget eros. Morbi pulvinar ullamcorper magna eget facilisis. Etiam ex arcu, porttitor sed vulputate a, pharetra vitae arcu. Morbi venenatis tristique justo, eu congue ante tristique sit amet. Nullam faucibus laoreet tempor. Nunc id ultricies nisi. Integer convallis, magna ut ullamcorper porta, massa neque ultricies velit, quis vehicula arcu sapien et justo. Duis aliquet vitae nulla quis ullamcorper. Integer mattis lectus fermentum eros lobortis posuere.\\n\\nMauris at semper neque. Nam vehicula dui ac justo faucibus, a bibendum arcu molestie. Nulla ex arcu, viverra sit amet tellus sed, vulputate vestibulum purus. In a velit semper, aliquam erat et, ultricies magna. Donec dolor ex, scelerisque eu porta a, scelerisque vitae purus. Nam bibendum faucibus mi. Sed malesuada elit et sem auctor venenatis. Donec bibendum metus id purus lobortis ullamcorper. Donec auctor sollicitudin leo, ut molestie orci congue a. Aenean pellentesque convallis rutrum. Sed sit amet nunc nec nunc dapibus lacinia id tempus sapien. Etiam ipsum turpis, blandit vitae congue in, sodales id nibh. Vestibulum justo augue, gravida vitae ullamcorper quis, iaculis sed diam. Mauris commodo dui mauris, ut pharetra tortor eleifend non.\",\"valueType\":\"\"}]}]</string>
    <string name="campaign_template_response">[{\"templateImage\":\"http://templates.beacon.do/C7F9E7C7-8FBF-93B6-59EB-515DD7A2A83F_720x1280.jpg\",\"transactionId\":\"9558B3A9-A2B3-4CAF-B07E-5AC7EBC07513\",\"imageGUID\":\"C7F9E7C7-8FBF-93B6-59EB-515DD7A2A83F\",\"pushText\":\"*Hi there! This is a Campaign Template.\",\"visibilityFlag\":false,\"distance\":\"433.77928279479454\",\"type\":0,\"actions\":[{\"type\":\"closeButton\",\"value\":\"img/closeButton_w.png\",\"properties\":\"{\\\"frame\\\":\\\"663;50;33;33\\\"}\"},{\"type\":\"action\",\"value\":\"kuponid\",\"valueType\":\"URL\",\"properties\":\"{\\\"frame\\\":\\\"33;1126;654;103\\\"}\"}]}]</string>
    <string name="push_notification_template_response">[{\"transactionId\":\"9558B3A9-A2B3-4CAF-B07E-5AC7EBC07513\",\"imageGUID\":\"5A35020B-D24D-4943-AF66-CE5B53AAADA1\",\"pushText\":\"*Hi there! This is Push Template.\",\"type\":1,\"actions\":[{\"type\":\"action\",\"value\":\"http://www.blesh.com\",\"valueType\":\"URL\"}]}]</string>
    <string name="qa_template_response">[{\"templateImage\":\"http://templates.beacon.do/A942FF94-F284-11E5-9830-00155D6A5E3C_720x1280.jpg\",\"transactionId\":\"9558B3A9-A2B3-4CAF-B07E-5AC7EBC07513\",\"imageGUID\":\"A942FF94-F284-11E5-9830-00155D6A5E3C\",\"pushText\":\"*Hi there! This is a Q &amp; A Template.\",\"visibilityFlag\":false,\"distance\":\"433.77928279479454\",\"type\":0,\"actions\":[{\"type\":\"closeButton\",\"value\":\"img/closeButton_w.png\",\"properties\":\"{\\\"frame\\\":\\\"668;18;34;34\\\"}\"},{\"type\":\"action\",\"value\":\"15\",\"valueType\":\"rating\",\"properties\":\"{\\\"frame\\\":\\\"34;1131;652;113\\\"}\"},{\"type\":\"action\",\"value\":\"0\",\"valueType\":\"rating\",\"properties\":\"{\\\"frame\\\":\\\"34;983;652;113\\\"}\"},{\"type\":\"action\",\"value\":\"0\",\"valueType\":\"rating\",\"properties\":\"{\\\"frame\\\":\\\"34;820;652;113\\\"}\"},{\"type\":\"action\",\"value\":\"0\",\"valueType\":\"rating\",\"properties\":\"{\\\"frame\\\":\\\"34;660;652;113\\\"}\"}]}]</string>
    <string name="ad_template_response">[{\"templateImage\":\"http://templates.beacon.do/833208AC-471A-9B8D-7751-A9487AB3449F_720x1280.jpg\",\"transactionId\":\"FB9E44D3-89B1-4017-B33E-87F300D781A0\",\"imageGUID\":\"833208AC-471A-9B8D-7751-A9487AB3449F\",\"pushText\":\"*Hi there! This is an Ad Template.\",\"visibilityFlag\":false,\"distance\":\"41.24938537103828\",\"type\":0,\"actions\":[{\"type\":\"action\",\"value\":\"http://www.blesh.com\",\"valueType\":\"URL\",\"properties\":\"{\\\"frame\\\":\\\"0;129;720;1159\\\"}\"},{\"type\":\"closeButton\",\"value\":\"img/closeButton_w.png\",\"properties\":\"{\\\"frame\\\":\\\"655;42;33;33\\\"}\"}]}]</string>

</resources>